syntax = "proto3";
import "google/protobuf/any.proto";
import "businessevents.proto";
import "technical.proto";

option java_package = "com.example.oneof";
option java_multiple_files = true;

/**
 * We want to send two different message types: an AccountTypeEvent, and a Marker event. This schema defines these
 * different messages in a OneOf explicitly listing both message types
 */
message TopicEnvelopeUsingOneOf {
    Header header = 1;
    oneof event {
        AccountTypeEvent accountType = 2;
        Marker marker = 3;
    }
}