syntax = "proto3";

option java_package = "com.example";
option java_multiple_files = true;

message Header{
    string correlationId = 1;
    string sourceSystem =2;
}
